# aplane

./: .env.test.example  .gitignore  .golangci-lint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bootstrap-install.sh  go.mod  go.sum  install.sh  minisign.pub
.github/workflows/: ci.yml  release.yml
analysis/: README.md
analysis/insecurerand/: main.go
analysis/keylog/: main.go
analysis/keyzero/: main.go
coreplugins/: README.md
coreplugins_repository/: README.md
doc/: ARCH_AI_SCRIPTING.md  ARCH_CRYPTO.md  ARCH_ENGINE.md  ARCH_LSIG_PROVIDER.md  ARCH_OVERVIEW.md  ARCH_PLUGINS.md  ARCH_POLICY.md  ARCH_SECURITY.md  ARCH_TXNFLOW.md  ARCH_UI.md  DEV_BUILD.md  DEV_GUIDELINES.md  DEV_MULTITEMPLATE_LSIG.md  DEV_New_DSA_LSig.md  DEV_New_GenericLSig.md  DEV_TESTING.md  TXN_BALANCE_VERIFICATION.md  TXN_BYTES_HEX.md  TXN_FEE_SPLITTING.md  TXN_MIXED_GROUPS.md  USER_COMMANDS.md  USER_CONFIG.md  USER_CONFIG_REFERENCE.md  USER_LINUX_INSTALL.md  USER_LOGGING.md  USER_STORE_MGMT.md
docker/: Dockerfile  README.md  tmux.conf
installer/: aplane.service  aplane.service.template  aplane@.service  aplane@.service.template  apsigner.service  apsigner.service.template  sudoers.template
lsig/: all.go
resources/: dummy.teal
scripts/: gen_presigned_txn.go  init-signer.sh  install-service.sh  passphrase-install.sh  systemcreds-install.sh  systemd-setup.sh
sdk/python/: MANIFEST.in  README.md  pyproject.toml
sdk/python/aplane/: __init__.py  signer.py
sdk/python/examples/: asa_transfer.py  atomic_swap.py  config.yaml.example  hashlock_claim.py  send.py
(+398 files in other folders)
