[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aplane"
version = "0.1.0"
description = "Python SDK for aPlane transaction signing"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "aPlane Authors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
keywords = ["algorand", "blockchain", "signing", "post-quantum", "falcon"]
dependencies = [
    "py-algorand-sdk>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
ssh = ["paramiko>=3.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/aplane/aplane"
Documentation = "https://github.com/aplane/aplane/tree/master/sdk/python"
Repository = "https://github.com/aplane/aplane"

[tool.setuptools.packages.find]
where = ["."]
include = ["aplane*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
